--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class=" collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <a class="scroll navbar-brand" href="#carousel">Home</a>
+                    <li><a class="scroll navbar-brand" href="#carousel">Home</a></li>
                     <li><a class="scroll" href="#musik1">Foretter</a></li>
                     <li><a class="scroll" href="#baren1">Hovedretter</a></li>
                     <li><a class="scroll" href="#kroteket1">Drikkevarer</a></li>
