--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 
             <div class="container" id="tourpackages-carousel">
 
-                <div class="row">
+                <div class="row produktliste">
+
+                    <!--Her skal produkter lægges ind -->
                     <template id="produkt_template">
                         <div class="col-lg-6">
                             <div class="thumbnail">
@@ -87,36 +89,10 @@
                             </div>
                         </div>
                     </template>
-                    <div class="col-lg-6">
-                        <div class="thumbnail">
-                            <img src="imgs/large/ringbroed.jpg" alt="">
-                            <div class="caption">
-                                <h4>Russisk ringbrød med vindruer
-</h4>
-                                <p class="thumbnailtext">
-                                    Russisk ringbrød efter en klassisk opskrift fra Karapatien. Dejen blandes koldhæver 30 dage, inde brødet bages over bål. Meget sprødt, godt med Karapatisk bjerggedsmør.
-
-                                </p>
-                                <div class="row">
-                                    <p class="pristext gammeltext col-lg-12"> Pris: 39kr. </p>
-                                    <p class="pristext rabattext col-lg-6">Rabatpris: 19.5kr. </p>
-                                    <p class="pristext col-lg-6 text-right">Vegetarisk</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
 
 
                 </div>
-                <!-- End row -->
-
-            </div>
-            <!-- End container -->
-
-
-
-        </div>
     </section>
 
 
@@ -125,26 +101,7 @@
 
             <h2 class="col-lg-12 text-center h2hoved"> Hovedretter</h2>
             <div class="col-lg-10 col-lg-offset-1 streg1"></div>
-            <div class="col-lg-6">
-                <div class="thumbnail">
-                    <img class="udsolgtimg" src="imgs/large/bondeplatte.jpg" alt="">
-                    <div class="caption farve2">
-                        <h4>Zygroffs bondeplatte
-</h4>
-                        <p class="thumbnailtext">
-                            Under de trange vilkår på landet Sibirien, bød husmændene på Zygroffs bondeplatte, når der var fest. Gode, grove grøntsager, tørret bøffelkod og masser af æg. Specielt for bondeplatten blev de dejlige caviar skiftet ud med billige kapers.
 
-
-                        </p>
-                        <div class="row">
-                            <p class="pristext col-lg-4"> Pris:109kr.</p>
-                            <p class="pristext col-lg-4 text-center">Udsolgt</p>
-                            <p class="pristext col-lg-4 text-right">Vegetarisk</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 
 
@@ -156,6 +113,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/petrograd.js"></script>
 
 </body>
 
