--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     </p>
                                     <div class="row">
                                         <p class="pristext udsolgt col-lg-4 pris"> Pris: <span class="data_pris"> DATA_PRIS</span>,- </p>
-                                        <p class="pristext rabattext col-lg-12"> Rabatpris: <span class="data_rabatpris">DATA_RABATPRIS </span>,- </p>
+                                        <p class="pristext rabatpris col-lg-12"> Rabatpris: <span class="data_rabatpris">DATA_RABATPRIS </span>,- </p>
                                         <!--skal kun vises hvis der er rabat -->
                                         <!-- TODO: sæt udsolgt class -->
                                         <p class="pristext udsolgttext col-lg-6 text-left">Udsolgt</p>
