--- a/index.html
+++ b/index.html
@@ -59,50 +59,90 @@
             <p class="col-lg-10 col-lg-offset-1">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac massa facilisis, vehicula ex et, condimentum nulla. Integer vitae euismod sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tortor nisl, fringilla quis tellus id, accumsan convallis erat. Morbi id lorem gravida, porttitor ante ut, placerat ligula. In sit amet ullamcorper felis. In nisl ante, lacinia id ullamcorper nec, lacinia ac quam. Curabitur tincidunt dolor ut lacinia accumsan. Phasellus aliquam elementum tellus non tristique. Etiam lorem lacus, sagittis at tempus vel, convallis ac dolor. Curabitur id magna nisi. Nulla volutpat libero lobortis, posuere augue non, maximus est.
             </p>
+        </div>
+        <div class="row forretter">
             <div class="col-lg-10 col-lg-offset-1 streg"></div>
             <h2 class="col-lg-12 text-center"> Foretter</h2>
+        </div>
+        <div class="container" id="tourpackages-carousel">
 
-            <div class="container" id="tourpackages-carousel">
+            <div class="row forretter">
 
-                <div class="row produktliste">
+                <!--Her skal produkter lægges ind -->
+                <template id="produkt_template">
+                    <div class="col-lg-6">
+                        <div class="thumbnail">
+                            <img class="data_billede img-responsive " src="imgs/large/caviarbruschetta.jpg" alt="">
+                            <div class="caption">
+                                <h4 class="data_navn">DATA_NAVN</h4>
+                                <p class="thumbnailtext">
+                                    Til denne dejlige Bruschetta anvender vi kun de dejligste sibiriske Caviar. Caviarerne presses ud af fiskene mens de stadig er levende, og vædes derefter i Putinka Vodka. Der er masser af bjerggedesmør på bruschettaene.
+                                </p>
+                                <div class="row">
+                                    <p class="pristext udsolgt col-lg-12 pris"> Pris: <span class="data_pris"> DATA_PRIS</span>,- </p>
+                                    <p class="pristext rabatpris col-lg-12"> Rabatpris: <span class="data_rabatpris">DATA_RABATPRIS </span>,- </p>
+                                    <!--skal kun vises hvis der er rabat -->
+                                    <!-- TODO: sæt udsolgt class -->
+                                    <p class="pristext udsolgttext col-lg-12 text-left">Udsolgt</p>
+                                    <!--skal kun vises hvis udsolgt -->
 
-                    <!--Her skal produkter lægges ind -->
-                    <template id="produkt_template">
-                        <div class="col-lg-6">
-                            <div class="thumbnail">
-                                <img class="data_billede img-responsive " src="imgs/large/caviarbruschetta.jpg" alt="">
-                                <div class="caption">
-                                    <h4 class="data_navn">DATA_NAVN</h4>
-                                    <p class="thumbnailtext">
-                                        Til denne dejlige Bruschetta anvender vi kun de dejligste sibiriske Caviar. Caviarerne presses ud af fiskene mens de stadig er levende, og vædes derefter i Putinka Vodka. Der er masser af bjerggedesmør på bruschettaene.
-                                    </p>
-                                    <div class="row">
-                                        <p class="pristext udsolgt col-lg-4 pris"> Pris: <span class="data_pris"> DATA_PRIS</span>,- </p>
-                                        <p class="pristext rabatpris col-lg-12"> Rabatpris: <span class="data_rabatpris">DATA_RABATPRIS </span>,- </p>
-                                        <!--skal kun vises hvis der er rabat -->
-                                        <!-- TODO: sæt udsolgt class -->
-                                        <p class="pristext udsolgttext col-lg-6 text-left">Udsolgt</p>
-                                        <!--skal kun vises hvis udsolgt -->
-                                        <p class="pristext col-lg-6 text-right">Ikke vegetarisk</p>
-                                    </div>
+
+                                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                                        Detaljer
+                                    </button>
                                 </div>
                             </div>
                         </div>
-                    </template>
+                    </div>
+                </template>
+
+            </div>
+
+            <div class="row hovedretter">
+                <div class="col-lg-10 col-lg-offset-1 streg"></div>
+                <h2 class="col-lg-12 text-center"> Hovedretter</h2>
+            </div>
+
+            <div class="row desserter">
+                <div class="col-lg-10 col-lg-offset-1 streg"></div>
+                <h2 class="col-lg-12 text-center"> Desserter</h2>
+            </div>
 
 
+            <div class="row sideorders">
+                <div class="col-lg-10 col-lg-offset-1 streg"></div>
+                <h2 class="col-lg-12 text-center"> Sideorders</h2>
+            </div>
 
+            <div class="row drikkevarer">
+                <div class="col-lg-10 col-lg-offset-1 streg"></div>
+                <h2 class="col-lg-12 text-center"> Drikkevarer</h2>
+            </div>
+    </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                 </div>
-    </section>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-    <section class="container">
-        <div class="row">
 
-            <h2 class="col-lg-12 text-center h2hoved"> Hovedretter</h2>
-            <div class="col-lg-10 col-lg-offset-1 streg1"></div>
 
-    </section>
+
 
 
 
