--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                                     <!--skal kun vises hvis udsolgt -->
 
 
-                                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-                                        Detaljer
+                                    <button data-id="UDSKIFT_MIG" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                                        Detaljer <span class="glyphicon glyphicon-chevron-right"></span>
                                     </button>
                                 </div>
                             </div>
@@ -129,10 +129,10 @@
                     <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <p class="buttontext"></p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Luk</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
